Fix navbar and jump link issues

--- a/main.css
+++ b/main.css
@@ -6,20 +6,19 @@ footer {
   padding-right: 50px;
 }
 
-.name-link-style {
-  float: left;
+.about-container {
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
 }
 
-.skills-link-style {
-  float: right;
+.row {
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
-.projects-link-style {
-  float: right;
-}
-
-.about-link-style {
-  float: right;
+.about-me-link {
+  margin-right: 20px;
 }
 
 .foot-fonts {
@@ -45,6 +44,7 @@ i + i {
   width: 100%;
   background-color: #395670;
   height: 850px;
+  overflow: scroll;
   /*margin: 5% 0 5% 0;*/
 }
 
@@ -66,6 +66,11 @@ i + i {
     background-color: #ffffff;
     padding-top: 3%;
     padding-bottom: 5%;
+}
+
+.neuropace-border {
+  border: solid;
+  border-color: #395670;
 }
 
 .navbar-brand, .active, p {
@@ -105,7 +110,7 @@ i + i {
 .profile-pic {
   left: 28%;
   right: 28%;
-  top: 10%;
+  top: 13%;
   bottom: 35%;
   position: absolute;
   width: 350px;
@@ -114,8 +119,8 @@ i + i {
 .about-me {
   left: 23%;
   right: 23%;
-  top: 60%;
-  bottom: 15%;
+  top: 65%;
+  bottom: 10%;
   position: absolute;
   width: 500px;
   background-color: #395670;
@@ -185,7 +190,7 @@ i + i {
   text-align: center;
 }
 
-.header-nav {
+/*.header-nav {
   overflow: hidden;
   background-color: white;
   position: fixed;
@@ -200,4 +205,4 @@ i + i {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-}
+}*/
